# spirv-to-dxil-rs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  clone_mesa.bat  clone_mesa.sh  mesa_mako
.github/workflows/: build.yaml
bindings_generator/: Cargo.toml
bindings_generator/src/: callbacks.rs  main.rs
dxbc_sign/: Cargo.toml
dxbc_sign/src/: main.rs
mach-siegbert-vogt-dxcsa/: Cargo.toml  README.md  realsigned_complex.blob
mach-siegbert-vogt-dxcsa/src/: lib.rs
spirv-to-dxil/: Cargo.toml
spirv-to-dxil-sys/: Cargo.toml  build.rs
spirv-to-dxil-sys/native/: CMakeLists.txt  install_spirv_to_dxil.cmake  mesa-sparse-checkout  wrapper.h
spirv-to-dxil-sys/native/mesa_mako/: dxil_nir_algebraic.c  git_sha1.h  nir_builder_opcodes.h  nir_constant_expressions.c  nir_intrinsics.c  nir_intrinsics.h  nir_intrinsics_indices.h  nir_opcodes.c  nir_opcodes.h  spirv_info.c  vtn_gather_types.c
spirv-to-dxil-sys/src/: bindings.rs  defs.rs  lib.rs  native.rs
spirv-to-dxil/src/: config.rs  ctypes.rs  dxbc.rs  dxil.rs  enums.rs  error.rs  lib.rs  logger.rs  object.rs  runtime.rs  specialization.rs
spirv-to-dxil/test/: fragment.spv  vertex.spv
