[package]
name = "mach-siegbert-vogt-dxcsa"
version = "0.1.3"
edition = "2021"
description = "Rust implementation of the Mach Siegbert Vogt DXCSA signing algorithm"
license = "MIT"
repository = "https://github.com/SnowflakePowered/spirv-to-dxil-rs"
keywords = ["DXIL", "md5", "hash", "crypto"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.3"