[package]
name = "spirv-to-dxil-sys"
version = "0.2.6"
edition = "2021"
description = "Raw bindings to spirv-to-dxil"
license = "MIT"
repository = "https://github.com/SnowflakePowered/spirv-to-dxil-rs"
keywords = ["SPIR-V", "DXIL"]
readme = "../README.md"

[lib]

[build-dependencies]
bindgen = "0.63.0"
cmake = "0.1"

[features]
included-bindings = []

[package.metadata.docs.rs]
features = ["included-bindings"]
