[package]
name = "spirv-to-dxil-sys"
version = "0.4.6"
edition = "2021"
description = "Raw bindings to spirv-to-dxil"
license = "MIT"
repository = "https://github.com/SnowflakePowered/spirv-to-dxil-rs"
keywords = ["SPIR-V", "DXIL"]
readme = "../README.md"

[lib]

[dependencies]
bytemuck = "1.13.0"

[build-dependencies]
cc = "1.0"
build-target = "0.4.0"