[package]
name = "spirv-to-dxil"
version = "0.4.1"
edition = "2021"
description = "Rust bindings to spirv-to-dxil"
license = "MIT"
repository = "https://github.com/SnowflakePowered/spirv-to-dxil-rs"
keywords = ["SPIR-V", "DXIL"]
readme = "../README.md"

[lib]

[dependencies]
spirv-to-dxil-sys = { version = "0.4", path = "../spirv-to-dxil-sys" }
thiserror = "1.0"
bytemuck = "1.13"
